FEAT: création du bouton CTA et implémentation en homepage

--- a/src/style.css
+++ b/src/style.css
@@ -12,4 +12,6 @@ body {
 @theme {
   --color-chocolate: #64403E;
   --color-latte: #D7B997;
+  --color-deepgreen: #619A62;
+  --color-light: #F5F5F5;
 }
