Style: ajustement couleur

--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,7 @@ body {
 @theme {
   --color-chocolate: #64403E;
   --color-latte: #D7B997;
-  --color-deepgreen: #619A62;
+  --color-matcha: #619A62;
   --color-light: #F5F5F5;
+  --color-frappe: #F2D7C2;
 }
